...
                    horizontalAlignment = Alignment.CenterHorizontally) {
                      Text(
                          text = "Select Time",
                          style = MaterialTheme.typography.titleLarge.copy(color = Color.White),
                          modifier = Modifier.padding(bottom = 16.dp))
...
                            TextButton(onClick = { showDialog = false }) {
                              Text(
                                  "Cancel",
                                  style =
                                      MaterialTheme.typography.labelLarge.copy(color = Color.White))
...
                                colors =
                                    ButtonDefaults.buttonColors(containerColor = EventDateColor)) {
                                  Text("OK", style = MaterialTheme.typography.labelLarge)
                                }
                          }
...
            verticalAlignment = Alignment.CenterVertically) {
              Text(
                  text = value.ifEmpty { "Select date" },
                  style =
                      MaterialTheme.typography.bodyMedium.copy(
...
      topBar = {
        TopAppBar(
            title = { Text(text = "Create your Event", color = Color.White) },
            navigationIcon = {
              IconButton(onClick = onNavigateBack) {
                Icon(
                    imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                    contentDescription = "Back",
                    tint = Color.White)
              }
...
      modifier = modifier.fillMaxWidth()) {
        Text(
            text = "Title*",
            style = MaterialTheme.typography.bodyMedium.copy(color = Color(0xFFFFFFFF)))
        TextField(
...
            placeholder = {
              Text(
                  "Amazing event",
                  style = MaterialTheme.typography.bodySmall.copy(color = Color.Gray))
            },
...
  ) {
    Text(
        text = "Description*",
        style = MaterialTheme.typography.bodyMedium.copy(color = Color(0xFFFFFFFF)))

...
              placeholder = {
                Text(
                    "This is amazing..",
                    style = MaterialTheme.typography.bodySmall.copy(color = Color.Gray))
              },
...
      horizontalAlignment = Alignment.CenterHorizontally) {
        Text(
            text = "Date & time*",
            style =
                MaterialTheme.typography.bodyMedium.copy(
...
                    Column(horizontalAlignment = Alignment.Start) {
                      Text(
                          text = "Start time",
                          style = MaterialTheme.typography.bodySmall.copy(color = Color.White))
                      Spacer(modifier = Modifier.height(4.dp))
...
                    Column(horizontalAlignment = Alignment.Start) {
                      Text(
                          text = "End time",
                          style = MaterialTheme.typography.bodySmall.copy(color = Color.White))
                      Spacer(modifier = Modifier.height(4.dp))
...
      horizontalAlignment = Alignment.CenterHorizontally) {
        Text(
            text = "Location*",
            style =
                MaterialTheme.typography.bodyMedium.copy(
...
            placeholder = {
              Text(
                  "Type a location",
                  style = MaterialTheme.typography.bodySmall.copy(color = Color.Gray))
            },
...
  ) {
    Text(
        text = "Tickets*",
        style =
            MaterialTheme.typography.bodyMedium.copy(
...
                      placeholder = {
                        Text(
                            "ex: 12",
                            style = MaterialTheme.typography.bodySmall.copy(color = Color.Gray))
                      },
...
                      placeholder = {
                        Text(
                            "ex: 100",
                            style = MaterialTheme.typography.bodySmall.copy(color = Color.Gray))
                      },
...
                  modifier = Modifier.size(16.dp))
              Spacer(Modifier.width(8.dp))
              Text(text = "Create event", style = MaterialTheme.typography.labelLarge)
            }
      }
...
